contended pad